--- a/.github/workflows/age.yaml
+++ b/.github/workflows/age.yaml
@@ -3,7 +3,7 @@ name: Update Age in README
 on:
   push:
   schedule:
-    - cron: "0 0 * * *"  # Runs every day at midnight UTC
+    - cron: "0 5 * * *"
 
 jobs:
   update-age:
